🔥 Added media queries for smaller screens

--- a/frontend/src/common/Styles.scss
+++ b/frontend/src/common/Styles.scss
@@ -1,3 +1,10 @@
 @import './Colors.scss';
+@import './Constants.scss';
 
 $gradient-bg: linear-gradient(to right, $red, $orange);
+
+@mixin small-screen {
+  @media screen and (max-width: $min-screen-width) {
+    @content;
+  }
+}
